2004-11-08  Rodney Dawes  <dobey@novell.com>

	* gui/alarm-notify/alarm-notify-dialog.c (write_html_heading):
	Don't try to convert the results of timet_to_str_with_zone to UTF-8,
	since the return value is already encoded in UTF-8

	Fixes #47529

2004-11-04  Rodrigo Moya <rodrigo@novell.com>

	* gui/dialogs/event-page.glade:
	* gui/dialogs/task-page.glade: expand the horizontal box so that it
	fills all available space.

2004-11-03  David Trowbridge  <trowbrds@cs.colorado.edu>

	* gui/e-cal-config.c: added EConfig subclass for calendars
	* gui/calendar-component.c, gui/tasks-component.c: initialize
	  plugin hooks on component startup.
	* gui/dialogs/calendar-setup.c: Converted to use EConfig

2004-11-04  Li Yuan  <li.yuan@sun.com>

	Fixes #6767

	* gui/e-day-view-main-item.c:
	(e_day_view_main_item_draw_day_event):
	use widget->style instead of hard code colors.
	* gui/e-day-view.c: (e_day_view_realize), (e_day_view_set_colors),
	(e_day_view_style_set), (e_day_view_reshape_long_event),
	(e_day_view_reshape_day_event):
	ditto.
	* gui/e-week-view.c: (e_week_view_realize),
	(e_week_view_set_colors), (e_week_view_style_set),
	(e_week_view_reshape_event_span):
	ditto.

2004-11-02  JP Rosevear  <jpr@novell.com>

	* gui/e-day-view-config.c (set_twentyfour_hour): make sure the day
	view times redraw themselves if we switch 24/12 hour modes

2004-11-02  JP Rosevear  <jpr@novell.com>
	
	Fixes #68707
	
	* gui/e-week-view-event-item.c (e_week_view_event_item_draw):
	restrict the range to 0-23 (midnight end times became '24')

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* gui/tasks-component.c (popup_event_cb): 
	* gui/e-calendar-view.c (e_calendar_view_create_popup_menu): 
	* gui/e-calendar-table.c (e_calendar_table_show_popup_menu):
	* gui/calendar-component.c (popup_event_cb): added hook doco.

2004-10-27  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-cal-list-view.c (e_cal_list_view_new): don't expand recurrences
	for the list view.
