@@ -1,3 +1,12 @@
+2004-11-23  Chenthill Palanisamy <pchenthill@novell>
+	
+	* gui/dialogs/calendar-setup.c
+	(eccp_general_offline): function to add the check box for
+	folder offline settings.
+	(offline_status_changed_cb): call back function for the same.
+	(ECalConfigItem eccp_items[]), (ECalConfigItem ectp_items[]):
+	 Added the check box function call in both the structures.
+	
 2004-11-08  Rodney Dawes  <dobey@novell.com>
 
 	* gui/alarm-notify/alarm-notify-dialog.c (write_html_heading):
